--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
     <script type="module" src="/build/dashjs.esm.js"></script>
     <script nomodule src="/build/dashjs.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
   </head>
   <body>
     <dashjs-reference-ui></dashjs-reference-ui>
