--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script nomodule src="/build/dashjs.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
   </head>
-  <body>
+  <body style="overflow: auto; max-height: none; position:relative;">
     <dashjs-reference-ui></dashjs-reference-ui>
   </body>
 </html>
