Feat/apicontrol statistics (#17)
* add ionic framework and component skeletons

resolves #13

* add ui link

* progressing

* player watch updated

* cleaned node_modules

* onclick events added

* player communication established

* stream select update

Co-authored-by: DanielHabenicht <daniel-habenicht@outlook.de>
Co-authored-by: Huy Viet Nguyen <huy.v.nguyen@campus.tu-berlin.de>

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script nomodule src="/build/dashjs.js"></script>
     <link rel="stylesheet" href="build/dashjs.css"/>
   </head>
-  <body>
+  <body style="overflow: auto; max-height: none; position:relative;">
     <dashjs-reference-ui></dashjs-reference-ui>
   </body>
 </html>
