--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
     <script type="module" src="/build/dashjs.esm.js"></script>
     <script nomodule src="/build/dashjs.js"></script>
+    <!-- <link rel="stylesheet" type = "text/css" href="https://reference.dashif.org/dash.js/latest/contrib/akamai/controlbar/controlbar.css"> -->
     <link rel="stylesheet" href="build/dashjs.css"/>
   </head>
   <body style="overflow: auto; max-height: none; position:relative;">
